Fix maven deploy. Relates to #5